mostly finished
