# src/routes/animals.js
@@ -1,0 +1,18 @@
+const express = require('express');
+const router = express.Router();
+
+const animalsController = require('../controllers/animals');
+
+
+router.get("/", animalsController.getAllAnimals);
+
+router.get("/:id", animalsController.getAnimalById);
+
+router.post("/", animalsController.createAnimal);
+
+router.put("/:id", animalsController.updateAnimal);
+
+router.delete("/:id", animalsController.deleteAnimal);
+
+
+module.exports = router;
